# jupyterhub-hooks

./: .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml
.github/workflows/: build-latest.yaml  build-tag.yaml
containers/k8s-hub/: Dockerfile
containers/minimal-notebook/: Dockerfile
docker/k8s-hub/: Dockerfile
osg/jupyter/: comanage.py  htcondor.py  kubespawner.py
osg/jupyterhub/: kubespawner_hooks.py
osg/jupyterhub_util/: comanage.py  htcondor.py
