## Project requirements (PEP 518, https://python-poetry.org/).


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]


[tool.black]
line-length = 96
target-version = ["py39", "py310", "py311", "py312"]


[tool.isort]
line_length = 96
profile = "black"


[tool.mypy]
explicit_package_bases = true
namespace_packages = true

check_untyped_defs = true
strict_optional = true
no_implicit_optional = true

warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

color_output = false
pretty = true
show_error_codes = true

incremental = true
sqlite_cache = true


[tool.poetry]
name = "osg_jupyterhub_hooks"
version = "7.1.1"
description = "KubeSpawner hooks for OSG's JupyterHub instance"
license = "Apache-2.0"
authors = [
    "Brian Aydemir <baydemir@morgridge.org>",
]
repository = "https://github.com/osg-htc/jupyterhub-hooks"
packages = [{ include = "osg" }]


[tool.poetry.dependencies]
## These dependencies are intended for quay.io/jupyterhub/k8s-hub:3.3.7.
python = "^3.11"
cryptography = "^42"
kubernetes-asyncio = "^29"
PyJWT = "~2.8"
PyYAML = "~6.0"

## Other dependencies.
baydemir = { git = "https://github.com/brianaydemir/pythonlib.git", tag = "1.0.1" }


[tool.poetry.group.dev.dependencies]
bandit = "~1.7"
black = "~24.4"
docutils = "~0.21"
isort = "~5.13"
mypy = "~1.10"
pre-commit = "~3.7"
pylint = "~3.2"
types-PyYAML = "~6.0"


[tool.pylint.messages-control]
max-line-length = 96
disable = "invalid-name,missing-class-docstring,missing-function-docstring"
